# mypy-dataklasses

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
mypy_dataklasses/: plugin.py
typesafety/: test_plugin.yml
