[project]
name = "mypy-dataklasses"
version = "0.1.0"
description = "MyPy Plugin for dataklasses"
authors = [
    {name = "guitvcer",email = "abdrakhman.galaxy.s2@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dataklasses (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-mypy-plugins = "^3.2.0"
ruff = "^0.9.6"
